updated git ignore and added images

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 indexTrials.html
 mainTrials.js
 stylesTrials.css
-jobImage.jpg
-jobImageTwo.jpeg
-morning.jpg
-morningTwo.jpg
 night.jpg
 nightTwo.jpg
 .vscode
 child.css
 child.html
+jobImage.jpg_original
+jobImageTwo.jpeg_original
+morning.jpg_original
+morningTwo.jpg_original
